@@ -1,3 +1,5 @@
+30.jan (db)
+      - fixed vocal range for bartione and bass (instruments.xml)
 29.jan (ws)
       - minor fix for version compare
 25.jan (la)
